# console_chess

./: .gitmodules  Admin.cpp  Admin.h  CMakeLists.txt  README.md  admin.cpp  admin.h  admin_chess.cpp  chess_board.cpp  chess_board.h  move.cpp  move.h  pawns.puml  piece.cpp  piece.h  pvc_chess.cpp  pvp_chess.cpp
GUI/: admin_gui.h  chess_board_gui.cpp  chess_board_gui.h
executables/: admin_chess.cpp  admin_chess_gui.cpp  pvc_chess.cpp
gui/: admin_gui.cpp  admin_gui.h  arrow.cpp  arrow.h  button.cpp  button.h  chess_board_gui.cpp  chess_board_gui.h  circle.cpp  circle.h  ppm_loader.cpp  ppm_loader.h
gui/assets/: black_bishop.ppm  black_king.ppm  black_knight.ppm  black_pawn.ppm  black_queen.ppm  black_rook.ppm  board_rotation.ppm  highlight_clean.ppm  white_bishop.ppm  white_king.ppm  white_knight.ppm  white_pawn.ppm  white_queen.ppm  white_rook.ppm
gui/assets/original images/: pieces.md
pawns/: bishop.cpp  bishop.h  king.cpp  king.h  night.cpp  night.h  pawn.cpp  pawn.h  piece.cpp  piece.h  queen.cpp  queen.h  rook.cpp  rook.h
windows_console/: admin.cpp  admin.h  admin_console.cpp  admin_console.h  full_command.cpp  full_command.h  icon.cpp  icon.h  scml.cpp  scml.h  win_colors.cpp  win_colors.h
